<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bkgn"
    tools:context=".activities.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_480"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/logo_small" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/tv_create_account"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_first_name"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/last_name_txt"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_last_name"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_email"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/phone_number_txt"
            android:inputType="phone"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_phone_number"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/pwd_txt"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_sign_up_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_password"
            android:gravity="center"
            android:text="@string/terms_cond_txt"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/tv_sign_up_terms"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/green"
            android:gravity="center"
            android:text="@string/sign_up_txt"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignUp"
            android:gravity="center"
            android:padding="@dimen/dp_2"
            android:text="@string/already_account"
            android:textColor="@color/greenColor"
            android:textSize="@dimen/sp_18" />


    </RelativeLayout>


</RelativeLayout>