<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bkgn"
    tools:context=".activities.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_480"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/justfoodlogo" />

        <TextView
            android:id="@+id/tv_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email_pwd_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login_txt"
            android:layout_centerHorizontal="true"
            android:text="@string/login_txt"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/tv_email_pwd_msg"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/gray_background"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_email"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/gray_background"
            android:hint="@string/pwd_txt"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/edt_password"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/green"
            android:gravity="center"

            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvLogin"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:padding="@dimen/dp_5"
            android:text="@string/forgot_pwd_txt"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_facebook_signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/tv_forgot_pwd"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/blue"
            android:gravity="center"
            android:text="@string/sign_with_fb"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/tv_facebook_signUp"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/green"
            android:gravity="center"
            android:text="@string/sign_up_create_account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>