<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_pwd_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />


    </RelativeLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginStart="@dimen/dp_15"
     android:layout_marginEnd="@dimen/dp_15">

     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/edt_old_pwd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="@string/old_pwd_txt"
         android:layout_marginTop="20dp"
         app:met_floatingLabel="highlight"
         app:met_floatingLabelPadding="2dp"
         app:met_floatingLabelTextSize="15sp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:maxLength="20"
         android:inputType="textPassword"/>


     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/edt_new_pwd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="@string/new_pwd_txt"
         android:layout_marginTop="20dp"
         app:met_floatingLabel="highlight"
         app:met_floatingLabelPadding="2dp"
         app:met_floatingLabelTextSize="15sp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:maxLength="20"
         android:inputType="textPassword"/>

     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/edt_confirm_pwd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:hint="@string/confirm_pwd_txt"
         android:inputType="textPassword"
         android:maxLength="20"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:met_floatingLabel="highlight"
         app:met_floatingLabelPadding="2dp"
         app:met_floatingLabelTextSize="15sp" />



     <Button
         android:id="@+id/tv_pwd_confirm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Green"
         android:gravity="center"
         android:text="@string/submit_txt"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginEnd="@dimen/dp_10"
         android:textSize="17sp"
         android:layout_marginTop="@dimen/dp_15"/>
 </LinearLayout>




</LinearLayout>