<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/back" />


    </RelativeLayout>


    <!--<ImageView-->
        <!--android:id="@+id/iv_logo"-->
        <!--android:layout_width="@dimen/dp_80"-->
        <!--android:layout_height="@dimen/dp_80"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="@dimen/dp_10"-->
        <!--android:src="@drawable/justfoodlogo"-->
        <!--android:layout_gravity="center" />-->

    <TextView
        android:id="@+id/tv_login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_email_pwd_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15">



    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email_txt"
        android:inputType="textEmailAddress"
         android:paddingStart="@dimen/dp_25"
        android:paddingEnd="10dp"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelPadding="2dp"
        app:met_floatingLabelTextSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/pwd_txt"
        android:inputType="textPassword"
         android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelPadding="2dp"
        app:met_floatingLabelTextSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:textSize="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"/>

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:padding="@dimen/dp_2"
        android:text="@string/forgot_pwd_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_15"
        android:gravity="right"/>



    <Button
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/Green"
        android:gravity="center"
        android:text="@string/sign_up_create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_15"/>


    </LinearLayout>
</LinearLayout>