<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"

        >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/greenLightColor"
            android:gravity="center"
            android:text="@string/Confirmation"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:text="@string/Check_login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/txtfirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/loginSuccess"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <TextView

            android:id="@+id/txtfirst2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtfirst"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:text="@string/thank_yo"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txtfirst2"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/greenLightColor"
            android:text="Ok"
            android:textColor="#ffffffff" />

    </RelativeLayout>
</RelativeLayout>
